client url add done

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_URL="mongodb://localhost:27017/chat"
 MONGO_URL2=`mongodb+srv://sujon:XvOrJNIfOSnv4ItB@cluster0.nlrhpzq.mongodb.net/?retryWrites=true&w=majority`
 DB_USER=sujon
 DB_PASS=XvOrJNIfOSnv4ItB
+CLIENT_SITE_URL="http://lo"
